# furo-topbar

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  tox.ini
.github/worflows/: ci.yaml
docs/: conf.py  index.md
furo_tb/: __init__.py  topbar.py
furo_tb/theme/: page.html  topbar.css  topbar.html
tests/: test_basic.py
